# foodflow-os

./: .env.example  .gitignore  COPILOT_PHASE4_COMPLETE.md  CRITICAL_FIXES_SUMMARY.md  FOUNDATION_GAP_ANALYSIS.md  FOUNDATION_IMPLEMENTATION_PLAN.md  FOUNDATION_SUMMARY.md  FSQ_PHASE31_COMPLETE.md  FSQ_PHASE31_PROGRESS.md  IMPLEMENTATION_COMPLETE.md  PLANNING_PHASE32_COMPLETE.md  PLANTOPS_PHASE3_COMPLETE.md  README.md  docker-compose.yml  package.json
.cursor/plans/: foodflow-foundation-a79622c9.plan.md
ai_service/: __init__.py  main.py
ai_service/modules/: __init__.py  brand.py  fsq.py  planning.py  plantops.py  retail.py
backend/: .coveragerc  .env.example  Dockerfile  README.md  pyproject.toml  pytest.ini
backend/alembic/: env.py
backend/alembic/versions/: 20241120_initial_schema.py  20241121_brand_foundation.py  20241121_complete_foundation.py  20241121_copilot_conversations.py  20241121_fsq_foundation.py  20241121_planning_foundation.py  20241121_plantops_expansion.py  20241121_retail_foundation.py
backend/scripts/: init_db.py  reset_dev_db.sh  seed_dev_data.py
backend/src/: main.py
backend/src/ai_orchestrator/: __init__.py  api.py
backend/src/ai_orchestrator/core/: __init__.py  conversation.py  llm_client.py  tool_registry.py
backend/src/ai_orchestrator/domain/: __init__.py  models.py  schemas.py
backend/src/ai_orchestrator/prompts/: __init__.py  brand_prompt.py  fsq_prompt.py  planning_prompt.py  plantops_prompt.py  retail_prompt.py
backend/src/ai_orchestrator/rag/: __init__.py  rag_tools.py
backend/src/ai_orchestrator/tools/: __init__.py  brand_tools.py  fsq_tools.py  planning_tools.py  plantops_tools.py  retail_tools.py
backend/src/contexts/brand/: __init__.py
backend/src/contexts/brand/api/: __init__.py  brands.py  copackers.py  documents.py  products.py  skus.py
backend/src/contexts/brand/application/: __init__.py  brand_service.py  copacker_service.py  document_service.py  product_service.py
backend/src/contexts/brand/domain/: __init__.py  models.py  schemas.py
backend/src/contexts/brand/infrastructure/: __init__.py  repositories.py
backend/src/contexts/fsq/: __init__.py
backend/src/contexts/fsq/api/: __init__.py  capas.py  deviations.py  documents.py  lots.py  suppliers.py
backend/src/contexts/fsq/application/: __init__.py  capa_service.py  deviation_service.py  document_service.py  lot_service.py  supplier_service.py
backend/src/contexts/fsq/domain/: __init__.py  models.py  schemas.py
backend/src/contexts/fsq/infrastructure/: __init__.py  repositories.py
backend/src/contexts/identity/api/: __init__.py  auth.py  tenants.py
backend/src/contexts/identity/application/: __init__.py  auth_service.py
backend/src/contexts/identity/domain/: models.py
backend/src/contexts/planning/: __init__.py
backend/src/contexts/planning/api/: __init__.py  forecasts.py  inventory.py  overview.py  production_plans.py  safety_stocks.py
backend/src/contexts/planning/application/: __init__.py  forecast_service.py  inventory_service.py  overview_service.py  production_plan_service.py  safety_stock_service.py
backend/src/contexts/planning/domain/: __init__.py  models.py  schemas.py
backend/src/contexts/planning/infrastructure/: __init__.py  repositories.py
backend/src/contexts/plant_ops/api/: __init__.py  batches.py  downtimes.py  lines.py  money_leaks.py  overview.py  sensors.py  trials.py
backend/src/contexts/plant_ops/application/: downtime_service.py  money_leak_service.py  overview_service.py  services.py  services_updated.py  trial_service.py
backend/src/contexts/plant_ops/domain/: models.py  schemas.py
backend/src/contexts/plant_ops/infrastructure/: repositories.py
backend/src/contexts/retail/: __init__.py
backend/src/contexts/retail/api/: __init__.py  osa.py  pos.py  promos.py  stores.py  waste.py
backend/src/contexts/retail/application/: __init__.py  osa_service.py  pos_service.py  promo_service.py  store_service.py  waste_service.py
backend/src/contexts/retail/domain/: __init__.py  models.py  schemas.py
backend/src/contexts/retail/infrastructure/: __init__.py  repositories.py
backend/src/core/: __init__.py  ai_client.py  config.py  database.py  errors.py  events.py  logging.py  security.py  streaming.py  tenancy.py
backend/src/core/ml/: README.md  anomaly_detection.py
backend/src/core/telemetry/: __init__.py  api.py  models.py  schemas.py  service.py
backend/tests/: __init__.py  conftest.py  test_analytics_api.py  test_copilot_tools.py  test_health.py  test_telemetry_service.py
docs/: 00_START_HERE.md  COPILOT_FIRST_PATTERN.md  COPILOT_IMPLEMENTATION.md  Foodflow doc.md  README.md  ai_contracts.md  concept_summary.md  forecasting_and_edge.md  graph_databases.md  technology_stack_recommendations.md
docs/api/: API_SPECIFICATIONS.md
docs/architecture/: 00_SYSTEM_ARCHITECTURE.md  01_ENHANCED_ARCHITECTURE.md  ADR-001-copilot-first-pattern.md
docs/database/: DATABASE_SCHEMAS.md
docs/deployment/: DEPLOYMENT_GUIDE.md
docs/development/: DEV_ENVIRONMENT_SETUP.md
docs/frontend/: UI_ARCHITECTURE.md
docs/implementation/: AI_CODER_ROADMAP.md
docs/research/: RESEARCH_INSIGHTS_INTEGRATION.md  foundation_best_practices.md
docs/security/: SECURITY_GUIDE.md
docs/templates/: SERVICE_IMPLEMENTATION_TEMPLATE.md
